# word_game_solver

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
help/: help
src/anagram_generator/: cli.py  core.py  utils.py
src/project/: cli.py  core.py  main.py  utils.py
src/word_game_solver/: __about__.py  cli.py  core.py  utils.py  wordfinder.py
src/word_game_solver/about/: README.md
src/word_game_solver/info/: log.txt
src/word_game_solver/logs/: log
src/word_game_solver/user_history/: history
user_history/: history
