[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "anagram_generator"
version = "1.0"
description = "Generate valid English word sets based on a specified word length and a set of input characters using anagrams and a file with English words."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Sharrrkkk"}]
maintainers = [{name = "Sharrrkkk"}]
keywords = ["anagram", "anagrams", "game", "generate", "word", "words"]
dependencies = []
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 3 - alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/Sharrrkkk/anagram_generator"
Documentation = "https://github.com/Sharrrkkk/anagram_generator#README.md"
Repository = "https://github.com/Sharrrkkk/anagram_generator"
Issues = "https://github.com/Sharrrkkk/anagram_generator/issues"

[project.scripts]
anagrams = "anagram_generator.cli:run_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anagram_generator = ["word_files/*"]